# FSharpActivePatterns

./: FSharpActivePatterns.opam  Makefile  README.md  dune-project  grading.md
.github/workflows/: PRformat.yml  master.yml
FSharpActivePatterns/lib/: ast.ml  astPrinter.ml  dune  inferencer.ml  parser.ml  printAst.ml  typedTree.ml
FSharpActivePatterns/tests/: dune  inference.t
fsharp_active_patterns/tests/: print_expr.t
tests/: dune  interpret_manytests.t
